# quadruped_sim_ros

./: .gitignore  README.md
controller_pkg/: CMakeLists.txt  package.xml
controller_pkg/scripts/: switch_in_and_out_jump_mode.py
controller_pkg/src/: controller_node.cpp
legged_robot_rtabmap/: CMakeLists.txt  package.xml
legged_robot_rtabmap/launch/: legged_robot_01_simulation.launch  legged_robot_02_rgb+depth_camera_mapping.launch  legged_robot_03_move_base.launch  rtabmap.launch
legged_robot_rtabmap/launch/Config/: move_base.launch
legged_robot_rtabmap/launch/Config/params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
legged_robot_rtabmap/rviz/: nav.rviz
legged_robot_rtabmap/src/: legged_robot_time_sync.cpp
my_legged_robot_msgs/: CMakeLists.txt  package.xml
my_legged_robot_msgs/msg/: FiveParametersOfTheFourLegs.msg
